[package]
name = "nea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ash = "0.37.3"
bytemuck = { version = "1.14.1", features = ["derive"] }
cfg-if = "1.0.0"
crossbeam-channel = "0.5.11"
egui = "0.25.0"
egui-winit = "0.25.0"
env_logger = "0.11.1"
glam = { version = "0.25.0", features = ["bytemuck"] }
gltf = "1.4.0"
gpu-allocator = "0.25.0"
image = "0.24.8"
log = "0.4.20"
parking_lot = "0.12.1"
rand = "0.8.5"
raw-window-metal = "0.4.0"
rfd = "0.13.0"
thiserror = "1.0.56"
winit = "0.29.10"

[build-dependencies]
shaderc = "0.8.3"
